# readability

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
IRB/: Attachment_A_Participant_Information_Sheet.docx  Attachment_B_Recruitment_Flyer.docx  Attachment_C_Lay_Reader_Survey_Instrument.docx  Attachment_D_Expert_Accuracy_and_Completeness_Rubric.docx  Attachment_E_Chatbot_Prompt_and_Platform_Log.docx  Attachment_F_Website_Search_and_Page_Capture_Protocol.docx  Attachment_G_Data_Collection_Variables.docx  Cardiac_Readability_IRB_Attachments.html  Preparation_Notes_and_Decisions.docx  Recommended_corrections_to_existing_attachments.docx  cardiac_readability_IRB_proposal.docx  cardiac_readability_supporting_documents.docx
config/: default.yaml  models.yaml  search_queries.yaml  sites.yaml
data/: manifest.csv  urls.csv
docs/: accuracy_scoring_rubric.md  ai_rewrite_protocol.md  aim3_automated_accuracy_assessment.md  background_summary.md  cardiac_readability_plan.docx  cost_estimates.md  data_scientist_tasks.md  implementation_guidelines.md  jama_publishability_and_improvements.md  literature_review.md  methods_and_statistics_companion.md  project_status_and_next_steps.md  reviewer_guide_naeem.md  sample_selection_protocol.md  statistical_analysis_plan.md  stats_deviations.md
literature/: README.md  citations.bib  mcenteggart_2015_abstract.txt
notebooks/: 01_exploratory.ipynb
prompts/: rewrite_v1.txt
reports/: aim1_benchmark_meeting.csv  aim1_descriptives_by_procedure.csv  aim1_descriptives_by_site.csv  aim1_descriptives_overall.csv  (+13 more)
(+553 files in other folders)
